force-app/main/default/objects/Flowhsheet__c/Flowhsheet__c.object-meta.xml
<CustomObject>
    <label>Flowsheet</label>
    <nameField>
        <displayFormat>Flowsheet# {00000000}</displayFormat>
        <label>Flowhsheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flowsheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>