force-app/main/default/objects/Flowhsheet__c/fields/Code_10__c.field-meta.xml
<CustomField>
    <fullName>Code_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Code 10</label>
    <type>Checkbox</type>
</CustomField>