force-app/main/default/objects/Flowhsheet__c/fields/Code_1__c.field-meta.xml
<CustomField>
    <fullName>Code_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>97110</label>
    <type>Checkbox</type>
</CustomField>