force-app/main/default/objects/Flowhsheet__c/fields/Code_2__c.field-meta.xml
<CustomField>
    <fullName>Code_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>97530</label>
    <type>Checkbox</type>
</CustomField>