force-app/main/default/objects/Flowhsheet__c/fields/CPT_Total_Units__c.field-meta.xml
<CustomField>
    <fullName>CPT_Total_Units__c</fullName>
    <formula>IF(
  AND(Total_Units__c &gt;= 8, Total_Units__c &lt;= 22), 1,
  IF(
    AND(Total_Units__c &gt;= 23, Total_Units__c &lt;= 37), 2,
    IF(
      AND(Total_Units__c &gt;= 38, Total_Units__c &lt;= 52), 3,
      IF(
        AND(Total_Units__c &gt;= 53, Total_Units__c &lt;= 67), 4,
        IF(
          AND(Total_Units__c &gt;= 68, Total_Units__c &lt;= 82), 5,
          IF(
            AND(Total_Units__c &gt;= 83, Total_Units__c &lt;= 97), 6,
            IF(
              AND(Total_Units__c &gt;= 98, Total_Units__c &lt;= 112), 7,
              IF(
                Total_Units__c &gt;= 113, 8,
                0
              )
            )
          )
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPT-Total Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>