force-app/main/default/objects/Flowhsheet__c/fields/CPT_Units_Total_2__c.field-meta.xml
<CustomField>
    <fullName>CPT_Units_Total_2__c</fullName>
    <formula>IF(
    AND(  Minutes_Total_2__c   &gt;= 8, Minutes_Total_2__c&lt;= 22), 1,
    IF(
        AND(Minutes_Total_2__c&gt;= 23, Minutes_Total_2__c&lt;= 37), 2,
        IF(
            AND(Minutes_Total_2__c&gt;= 38, Minutes_Total_2__c&lt;= 52), 3,
            IF(
                AND(Minutes_Total_2__c&gt;= 53, Minutes_Total_2__c&lt;= 67), 4,
                IF(
                    AND(Minutes_Total_2__c&gt;= 68, Minutes_Total_2__c&lt;= 82), 5,
                    IF(
                        AND(Minutes_Total_2__c&gt;= 83, Minutes_Total_2__c&lt;= 97), 6,
                        IF(
                            AND(Minutes_Total_2__c&gt;= 98, Minutes_Total_2__c&lt;= 112), 7,
                            IF(
                                AND(Minutes_Total_2__c&gt;= 113), 8,
                                0
                            )
                        )
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPT-Units Total 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>