force-app/main/default/objects/Flowhsheet__c/fields/Data_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Data_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Not Required</label>
    <type>Checkbox</type>
</CustomField>