force-app/main/default/objects/Flowhsheet__c/fields/Exercise_2__c.field-meta.xml
<CustomField>
    <fullName>Exercise_2__c</fullName>
    <label>Exercise-2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Exercise</valueSetName>
    </valueSet>
</CustomField>