force-app/main/default/objects/Flowhsheet__c/fields/Flowsheet_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>Flowsheet_Cleared_Date__c</fullName>
    <description>Set to the date that a user has cleared the flowsheet</description>
    <label>Flowsheet Cleared Date</label>
    <type>Date</type>
</CustomField>