force-app/main/default/objects/Flowhsheet__c/fields/FSDiagnostics__c.field-meta.xml
<CustomField>
    <fullName>FSDiagnostics__c</fullName>
    <label>FSDiagnostics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>