force-app/main/default/objects/Flowhsheet__c/fields/Minutes_spent_1__c.field-meta.xml
<CustomField>
    <fullName>Minutes_spent_1__c</fullName>
    <label>Summary 1</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>