force-app/main/default/objects/Flowhsheet__c/fields/Minutes_Total_1__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Total_1__c</fullName>
    <label>Minutes Total 1</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>