force-app/main/default/objects/Flowhsheet__c/fields/OtherExercises10__c.field-meta.xml
<CustomField>
    <fullName>OtherExercises10__c</fullName>
    <label>OtherExercises10</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>