force-app/main/default/objects/Flowhsheet__c/fields/OtherExercises1__c.field-meta.xml
<CustomField>
    <fullName>OtherExercises1__c</fullName>
    <label>OtherExercises1</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>