force-app/main/default/objects/Flowhsheet__c/fields/OtherExercises2__c.field-meta.xml
<CustomField>
    <fullName>OtherExercises2__c</fullName>
    <label>OtherExercises2</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>