force-app/main/default/objects/Flowhsheet__c/fields/OtherExercisesUnits10__c.field-meta.xml
<CustomField>
    <fullName>OtherExercisesUnits10__c</fullName>
    <label>OtherExercisesUnits10</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>