force-app/main/default/objects/Flowhsheet__c/fields/OtherExercisesUnits1__c.field-meta.xml
<CustomField>
    <fullName>OtherExercisesUnits1__c</fullName>
    <label>OtherExercisesUnits1</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>