force-app/main/default/objects/Flowhsheet__c/fields/OtherExercisesUnits2__c.field-meta.xml
<CustomField>
    <fullName>OtherExercisesUnits2__c</fullName>
    <label>OtherExercisesUnits2</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>