force-app/main/default/objects/Flowhsheet__c/fields/ROM__c.field-meta.xml
<CustomField>
    <fullName>ROM__c</fullName>
    <formula>TEXT(CPT_Units_Total_7__c) &amp; &quot; Unit&quot; &amp; IF(CPT_Units_Total_7__c = 1, &quot;&quot;, &quot;s&quot;) &amp; &quot; / &quot; &amp; TEXT(Minutes_Total_7__c) &amp; &quot; min&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROM</label>
    <type>Text</type>
</CustomField>