force-app/main/default/objects/Flowhsheet__c/fields/Summary_10__c.field-meta.xml
<CustomField>
    <fullName>Summary_10__c</fullName>
    <label>Minutes spent 10</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>