force-app/main/default/objects/Flowhsheet__c/fields/Summary_1__c.field-meta.xml
<CustomField>
    <fullName>Summary_1__c</fullName>
    <label>Minutes spent 1</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>