force-app/main/default/objects/Flowhsheet__c/fields/Summary_2__c.field-meta.xml
<CustomField>
    <fullName>Summary_2__c</fullName>
    <label>Minutes spent 2</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>