force-app/main/default/objects/Flowhsheet__c/fields/TE_9__c.field-meta.xml
<CustomField>
    <fullName>TE_9__c</fullName>
    <formula>TEXT(CPT_Units_Total_9__c) &amp; &quot; Unit&quot; &amp; IF(CPT_Units_Total_9__c = 1, &quot;&quot;, &quot;s&quot;) &amp; &quot; / &quot; &amp; TEXT(Minutes_Total_9__c) &amp; &quot; min&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TE 9</label>
    <type>Text</type>
</CustomField>