force-app/main/default/objects/Flowhsheet__c/fields/TE__c.field-meta.xml
<CustomField>
    <fullName>TE__c</fullName>
    <formula>TEXT(CPT_Units_Total_1__c) &amp; &quot; Unit&quot; &amp; IF(CPT_Units_Total_1__c = 1, &quot;&quot;, &quot;s&quot;) &amp; &quot; / &quot; &amp; TEXT(Minutes_Total_1__c) &amp; &quot; min&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TE</label>
    <type>Text</type>
</CustomField>