force-app/main/default/objects/Flowhsheet__c/fields/TR__c.field-meta.xml
<CustomField>
    <fullName>TR__c</fullName>
    <formula>TEXT(CPT_Units_Total_6__c) &amp; &quot; Unit&quot; &amp; IF(CPT_Units_Total_6__c = 1, &quot;&quot;, &quot;s&quot;) &amp; &quot; / &quot; &amp; TEXT(Minutes_Total_6__c) &amp; &quot; min&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TR</label>
    <type>Text</type>
</CustomField>