force-app/main/default/objects/Flowhsheet__c/fields/Units_10__c.field-meta.xml
<CustomField>
    <fullName>Units_10__c</fullName>
    <label>Units 10</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>