force-app/main/default/objects/Flowhsheet__c/fields/Units_1__c.field-meta.xml
<CustomField>
    <fullName>Units_1__c</fullName>
    <label>Units 1</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>