force-app/main/default/objects/Flowhsheet__c/fields/Units_2__c.field-meta.xml
<CustomField>
    <fullName>Units_2__c</fullName>
    <label>Units 2</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>