force-app/main/default/objects/Flowhsheet__c/fields/Units_Total_10__c.field-meta.xml
<CustomField>
    <fullName>Units_Total_10__c</fullName>
    <label>Units Total 10</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>