force-app/main/default/objects/Flowhsheet__c/fields/Units_Total_2__c.field-meta.xml
<CustomField>
    <fullName>Units_Total_2__c</fullName>
    <label>Units Total 2</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>