force-app/main/default/objects/Flowhsheet__c/recordTypes/flowsheetRT.recordType-meta.xml
<RecordType>
    <fullName>flowsheetRT</fullName>
    <active>true</active>
    <label>flowsheetRT</label>
</RecordType>