force-app/main/default/objects/Flowhsheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Appointment__c</columns>
    <columns>Total_Units__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>