force-app/main/default/objects/Flowhsheet__c/listViews/Provider_Queue_Flowhsheet1.listView-meta.xml
<ListView>
    <fullName>Provider_Queue_Flowhsheet1</fullName>
    <filterScope>Queue</filterScope>
    <label>Provider Queue</label>
    <queue>Provider_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>